tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr21964_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr21964-1.c" (c, x86_64-unknown-linux-gnu)
fn exit(%arg0: s32i) -> void [external, c];
fn abort() -> void [external, c, nothrow];
fn foo(%arg0: s32i, %arg1: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %5 = alloca s32i, "n", align 4
        %6 = alloca s32i, "m", align 4
        store %arg0, %5
        store %arg1, %6
        scope {
            %7 = load %6 : s32i, align 4
            %8 = const 0 : s32i
            %9 = cmp eq %7, %8 : bool
            if %9 {
                %19 = get_global @exit : ((s32i) -> void)*
                %20 = const 0 : s32i
                call @exit(%20) [all]
                yield
            } else {
                scope {
                    %10 = load %5 : s32i, align 4
                    %11 = const 0 : s32i
                    %12 = cmp ne %10, %11 : bool
                    if %12 {
                        %18 = get_global @abort : (() -> void)*
                        call @abort() [all]
                        yield
                    } else {
                        %13 = load %5 : s32i, align 4
                        %14 = inc %13 : s32i [nsw]
                        store %14, %5, align 4
                        %15 = load %6 : s32i, align 4
                        %16 = const 1 : s32i
                        %17 = sub %15, %16 : s32i [nsw]
                        call @foo(%13, %17) [all]
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 0 : s32i
    %3 = const 4 : s32i
    call @foo(%2, %3) [all]
    %4 = load %0 : s32i
    return %4
}
